[project]
name = "my-resume-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "langchain-openai>=0.3.24",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.3.3",
]

[tool.setuptools]
packages = ["langgraph.templates.agent"]

[tool.setuptools.package-dir]
"langgraph.templates.agent" = "agent"
